<resources>
    <string name="notifications_service">NiLS Service</string>
    <string name="service_is_inactive">Enable NiLS service on Android Security Settings to provide notification access so all upcoming notifications will be captured and displayed on NiLS</string>
    <string name="service_is_active">NiLS Service is running.\nAll upcoming notifications will be captured and displayed on NiLS</string>
    <string name="enable_service_tip">Find \"NiLS Service\" in the list and enable it, then press the \"Back\" button to go back to NiLS</string>
    <string name="notification_panel">Notifications Panel</string>
    <string name="notification_panel_is_active">Notifications panel is active.\nNotifications list will be displayed when the lock screen appears</string>
    <string name="notification_panel_is_inactive">Notifications panel is not active</string>
    <string name="auto_hide_service">Auto Hide Service</string>
    <string name="auto_hide_is_inactive">When enabled, Auto Hide Service will automatically hide Notifications Panel when you pull down Android Notifications Bar</string>
    <string name="auto_hide_is_active">NiLS Auto Hide Service is enabled. Notification Panel will be automatically hidden when you pull down Android Notifications Bar</string>
    <string name="enable_auto_hide_service_tip">Find \"NiLS Service\" in the list and enable it, then press the \"Back\" button to go back to NiLS</string>
    <string name="nilsfp_autohide_service_label">NiLS Auto Hide Service</string>
    <string name="nilsfp_autohide_service_description">Enable this service to auto hide NiLS Notifications Panel when lock screen is not visible. (e.g. when the notifications bar is pulled down from the status bar)</string>
    <string name="title">NiLS</string>
    <string name="settingstitle">NiLS Settings</string>
    <string name="accessibility_service_description">Enable to allow NiLS receive all incoming notifications. The disclaimer displayed when enabling the accessibility service is a standard Android message. This app DOES NOT collect any of your data. Please note that this app doesn\'t have internet access permission so it actually cannot send the data anywhere.</string>
    <string name="generalsettings">General Settings</string>
    <string name="advancedsettings">Advanced Settings</string>
    <string name="behavior">Auto Wake up</string>
    <string name="appearance">Appearance</string>
    <string name="advanced">Advanced</string>
    <string name="notifications">Notifications</string>
    <string name="turnscreenon">Turn on screen</string>
    <string-array name="wakeup_mode_entries">
        <item>Never</item>
        <item>Only if the device is not covered</item>
        <item>Next time the device is uncovered</item>
        <item>Always</item>
    </string-array>
    <string name="battery_usage_warning">Battery Usage Warning</string>
    <string name="battery_usage_warning_summary">Using this option requires a constant usage of the proximity sensor.\nThis may drain your battery.\nIf you experiencing an high battery usage please choose other wakeup modes.</string>
    <string name="turnscreenoff">Turn off screen</string>
    <string name="turn_off_default">Device default</string>
    <string name="turn_off_10">After 10 seconds</string>
    <string name="turn_off_15">After 15 seconds</string>
    <string name="turn_off_30">After 30 seconds</string>
    <string name="turn_off_45">After 45 seconds</string>
    <string name="turn_off_60">After 60 seconds</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clearonunlock">Clear when unlocked</string>
    <string name="clearonunlock_summary">Clear all notifications when device is unlocked</string>
    <string name="collectonunlock">Collect when unlocked</string>
    <string name="collectonunlock_summary">Keep collecting notifications when device is unlocked</string>
    <string name="order_notifications_by">Sort notifications by</string>
    <string name="clear_all_from_same_app">Clear all from the same app</string>
    <string name="clear_all_from_same_app_summary">When a notification is opened, clear all of the remaining notifications from the same app</string>
    <string name="icon_pack">Icon Pack</string>
    <string name="grouped">Grouped</string>
    <string name="separated">Separated</string>
    <string name="conversation">Conversation (if available)</string>
    <string name="notification_mode">Notification mode</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_none">None</string>
    <string name="privacy_no_interaction">Do not allow interaction</string>
    <string name="privacy_show_title">Show title only</string>
    <string name="privacy_show_ticker">Show status bar text only</string>
    <string name="privacy_show_appname">Show app name only</string>
    <string name="auto_clear_notifications">Auto clear notifications</string>
    <string name="when_cleared">When cleared from notifications bar</string>
    <string name="when_app_is_opened">When notification app is opened</string>
    <string name="when_device_is_unlocked">When device unlocked</string>
    <string name="sync_back">Sync back notifications</string>
    <string name="sync_back_summary">When notification is cleared on NiLS dismiss it also on Android Notifications Bar\n(Android 4.3 and above only)</string>
    <string-array name="settings_orderby_entries">
        <item>Newest first</item>
        <item>Oldest first</item>
        <item>Notification Priority</item>
    </string-array>
    <string name="lock_screen">Lock Screen</string>
    <string name="auto_detect_lock_screen">Auto detect lock screen app</string>
    <string name="current_lock_screen_app">Current lock screen app:%s\nEnable auto detection if you are using a different lock screen app</string>
    <string name="stock_lock_screen">Android (Stock)</string>
    <string name="new_lock_screen_detected">%s lock screen app detected</string>
    <string name="new_lock_screen_detected_text">Would you like to display notifications on top of it instead of your current lock screen (%s)?</string>
    <string name="never_suggest_title">Keep detecting lock screen app?</string>
    <string name="never_suggest_lockscreen_apps">Would you like NiLS to automatically detect your current lock screen app next time?\nYou can always change this option on NiLS Global Settings > Advanced</string>
    <string name="experimental">Experimental </string>
    <string name="max_lines">Maximum text lines</string>
    <string name="show_full_notification">Show full notification content</string>
    <string name="show_full_notification_summary">Show full notification content as it appears on notifications bar</string>
    <string name="sync_notifications">Sync with notifications bar</string>
    <string name="clear_app_notifications">Clear when app is opened</string>
    <string name="clear_app_notifications_summary">Automatically clear app notifications when it launched. (Not available on 4.3 or later)</string>
    <string name="force_clear_on_open">Clear notifications when opened</string>
    <string name="force_clear_on_open_summary">Forcibly clear notification when it opened even if the app hasn\'t clear it by itself</string>
    <string-array name="max_lines_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>Unlimited</item>
    </string-array>
    <string name="service_inactive_text">Service is inactive. Tap on the alert icon to go to Android Settings, then enable \"NiLS Service\" from the list.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="title_activity_main">NiLS</string>
    <string name="tutorial_help_1">NiLS need to get access to your notifications.\nPlease follow instructions below to enable NiLS service on Android settings.</string>
    <string name="tutorial_instructions">Instructions:</string>
    <string name="tutorial_step_1">Click the button below to open Android settings</string>
    <string name="tutorial_step_2">Find \"NiLS Service\" in the list and enable it</string>
    <string name="tutorial_step_3">Click \"OK\" in the warning dialog</string>
    <string name="tutorial_step_4">Click \"Back\" button to return to NiLS settings</string>
    <string name="about_title">NiLS</string>
    <string name="about_subtitle">NiLS is developed by Roymam</string>
    <string name="about_content">The project is hosted on:\nhttp://code.google.com/p/notifications-widget/\nFeel free to open issues for any bug report or feature request</string>
    <string name="about_contactus_title">Feedback</string>
    <string name="about_close">Close</string>
    <string name="contact_summary">Contact us to ask a question, request a feature or report a bug.</string>
    <string name="contact_email">Send us an email</string>
    <string name="contact_community">Join our community on Google+</string>
    <string name="version">Version</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="widget_help_no_ls_title">NiLS Widget Requires Android 4.2 and above</string>
    <string name="widget_help_no_ls_subtitle">Lock screen widgets are supported on Android 4.2 and above</string>
    <string name="widget_help_no_ls_body">You can\'t add NiLS widget to your lock screen unless you are using 3rd party lock screen app such as WidgetLocker.</string>
    <string name="widget_help_title">How to add NiLS to the Lock Screen?</string>
    <string name="widget_help_summary">Specific insrutctions might be different on variant devices.</string>
    <string name="widget_help_text">Please refer to your device manual to learn how to add widgets to the lock screen</string>
    <string name="widget_help_step_1_title">1. Enable lock screen widgets</string>
    <string name="widget_help_step_1_body">Some devices require you to enable lock screen widgets.\nGo to device Security or Lock Screen settings and enable Lock Screen widgets.\nPlease note that Samsung S4 doesn\'t allow lock screen widgets when lock screen is secured with pin code or pattern lock, Samsung S5 doesn\'t support lock screen widgets at all</string>
    <string name="widget_help_step_2_title">2. Lock your screen</string>
    <string name="widget_help_step_2_body">Lock your screen manually using the device power button</string>
    <string name="widget_help_step_3_title">3. Swipe to the right</string>
    <string name="widget_help_step_3_body">Swipe the screen to the right, a \'+\' button will appear, click on it.</string>
    <string name="widget_help_step_4_title">4. Add NiLS widget</string>
    <string name="widget_help_step_4_body">Choose NiLS widget from the list. this will add it as your lock screen widget.</string>
    <string name="widget_help_step_5_title">5. Make NiLS widget as primary</string>
    <string name="widget_help_step_5_body">Expand NiLS widget by swiping it down, then drag it to the right to make it primary widget.\nPlease note that HTC one doesn\'t allow widgets to be on the primary lock screen page</string>
    <string name="preview_title">Notification Title</string>
    <string name="preview_text">Notification Description Line 1\nNotification Description Line 2\nThe next lines will be empty</string>
    <string name="preview_time">12:34</string>
    <string name="post_to_wear">Post to Android Wear</string>
    <string name="post_to_wear_summary">Post notifications to Android Wear</string>
    <string name="ignore_repeating_notifications">Ignore repeating notifications</string>
    <string name="ignore_repeating_notifications_summary">Ignore notifications with the same text like the previously dismissed ones</string>
</resources>