<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_elevation">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.CardTitle"
                    android:text="@string/widget_help_title"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.CardSubTitle"
                    android:text="@string/widget_help_summary"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Text"
                android:text="@string/widget_help_text"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>
        </LinearLayout>
        </android.support.v7.widget.CardView>
        <View android:layout_height="16dp"
            android:layout_width="match_parent"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/TextAppearance.CardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_help_step_1_title"
                    android:layout_gravity="center"/>
                <TextView
                    style="@style/TextAppearance.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_help_step_1_body"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View android:layout_height="16dp"
            android:layout_width="match_parent"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/TextAppearance.CardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_help_step_2_title"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/widget_help_step_2_body"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View android:layout_height="16dp"
            android:layout_width="match_parent"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/TextAppearance.CardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_help_step_3_title"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/widget_help_step_3_body"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/tutorial_plus"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View android:layout_height="16dp"
            android:layout_width="match_parent"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/TextAppearance.CardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_help_step_4_title"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/widget_help_step_4_body"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/tutorial_widget_add"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View android:layout_height="16dp"
            android:layout_width="match_parent"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/TextAppearance.CardSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_help_step_5_title"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/widget_help_step_5_body"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>