<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_elevation">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.CardTitle"
                android:text="@string/widget_help_no_ls_title"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.CardSubTitle"
                android:text="@string/widget_help_no_ls_subtitle"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Text"
            android:text="@string/widget_help_no_ls_body"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>