<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_notification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/notification_content">
        <RelativeLayout
            android:layout_width="@dimen/notification_default_icon_size"
            android:layout_height="@dimen/notification_default_icon_size"
            android:background="#ff1d3741"
            android:id="@+id/notification_bg"
            android:longClickable="false">
            <ImageView
                android:id="@+id/icon_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@android:color/transparent"
                tools:ignore="ContentDescription" />
            <ImageView
                android:id="@+id/notification_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/notification_icon"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/icon_fg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@android:color/transparent"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/notification_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/notification_bg"
            android:layout_toRightOf="@id/notification_bg"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/notification_title"
                android:text="@string/preview_title"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@android:color/white"
                android:layout_toLeftOf="@+id/notification_time"
                android:layout_toStartOf="@+id/notification_time" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/notification_time"
                android:text="@string/preview_time"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@android:color/white"
                android:visibility="visible"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/notification_title"
                android:gravity="center_vertical" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/preview_text"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@android:color/darker_gray"
                android:id="@+id/notification_text"
                android:longClickable="false"
                android:linksClickable="false"
                android:scrollbars="vertical"
                android:layout_below="@+id/notification_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/notification_big_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notification_actions"
        android:layout_marginBottom="8dp"
        android:showDividers="middle"
        android:divider="?android:attr/listDivider"
        android:dividerPadding="12dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/quick_reply_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_weight="0.75"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">
            <TextView
                android:text="Quick Reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quick_text_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="HardcodedText" />
            <EditText
                android:id="@+id/quick_reply_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:layout_below="@+id/quick_text_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
        <ImageButton
            android:id="@+id/quick_reply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:src="@android:drawable/ic_menu_send"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/send"
            style="?android:attr/borderlessButtonStyle"
            android:drawablePadding="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            />
        <Button
            android:id="@+id/customAction1"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text=""
            style="?android:attr/borderlessButtonStyle"
            android:gravity="start|center_vertical"
            android:layout_gravity="center_vertical"
            android:drawablePadding="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="#ccc"
            android:textSize="14dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:visibility="gone"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/abc_ic_menu_share_mtrl_alpha"
            android:drawableLeft="@drawable/abc_ic_menu_share_mtrl_alpha"
            android:textAllCaps="true"/>
        <Button
            android:id="@+id/customAction2"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text=""
            style="?android:attr/borderlessButtonStyle"
            android:gravity="start|center_vertical"
            android:layout_gravity="center_vertical"
            android:drawablePadding="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="#ccc"
            android:textSize="14dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:visibility="gone"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/abc_ic_menu_cut_mtrl_alpha"
            android:drawableLeft="@drawable/abc_ic_menu_cut_mtrl_alpha"
            android:textAllCaps="true"/>
    </LinearLayout>
</LinearLayout>